# evo-strut

./: Cargo.toml  LICENSE  readme.md
quick_tests/: readmoe.md
quick_tests/structural_stifness/: custom_types.py  main.py  requirements.txt  testcases.py  visualize.py
quick_tests/structural_stifness/evaluation/: anastruct_evaluator.py  interface.py
src/: main.rs
src/evolution/: elitist_next_generation_selector.rs  evolver.rs  mod.rs  patience_based_termination_strategy.rs  random.rs  score.rs  tournament_based_crossover_selection.rs
src/models/: ids.rs  mesh.rs  mesh_vector.rs  mod.rs  plane.rs  point.rs  settings.rs  tests.rs  triangle.rs
src/stages/: mod.rs
src/stages/contact_point_optimization/: corssover.rs  evaluation.rs  initializer.rs  mod.rs  models.rs  mutation.rs
src/stages/contact_point_optimization/evaluation/: bucketed_triangles.rs  surface_grid.rs
src/stages/criticality_detection/: mod.rs  propagation.rs
src/stages/criticality_evaluation/: mod.rs
src/stages/criticality_grouping/: mod.rs
src/stages/loading/: mod.rs
src/stages/support_structure_optimization/: crossover.rs  evaluation.rs  generate_genome.rs  initializer.rs  mod.rs  models.rs  mutation.rs
src/stages/visualization/: color.rs  mod.rs
src/support/: graph_circle.rs  links.rs  mod.rs  random_distribution.rs  remove_random.rs
test_meshes/: credits.md  cylinder_support_test.stl  inclination_test.stl  inclination_test_rounded.stl  struct_support_test.stl  tree_support_test.stl
