[package]
name = "evo-strut"
version = "0.1.0"
edition = "2024"

[dependencies]
rerun = "0.29.2"
anyhow = "1.0.102"
rayon = "1.11.0"
itertools = "0.14.0"
rand = "0.10.0"
log = "0.4.29"
env_logger = "0.11.9"
smallvec = "1.15.1"
baby_shark = "0.3.12"
nalgebra = "0.34.1"
rand_distr = "0.6.0"
# apparently raw access to hashmap's table has being removed
# in the next versions.
hashbrown = { version = "0.14.2", features = [ "raw" ] }
